naprawiono pokazywanie dat i czyszczenie zadań
czyszczenie zadań z poprzedniego tygodnia, przy każdym rozpoczętym nowym tygodniu

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Kurs JavaScript</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+    <!-- <link rel="stylesheet" href="./src/css/bootstrap.min.css"> -->
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
@@ -17,31 +20,31 @@
         <nav class="nav shadow bg-white rounded">
             <ul class="list-group justify-content-around text-center vh-100">
                 <li class="nav-item border-bottom active" data-day="monday">
-                    <span class="badge badge-pill badge-secondary">14</span>
+                    <span class="badge badge-pill badge-secondary"></span>
                     <span class="date">Poniedziałek</span>
                 </li>
                 <li class="nav-item border-bottom" data-day="tuesday">
-                    <span class="badge badge-pill badge-secondary">14</span>
+                    <span class="badge badge-pill badge-secondary"></span>
                     <span class="date">Wtorek</span>
                 </li>
                 <li class="nav-item border-bottom" data-day="wednesday">
-                    <span class="badge badge-pill badge-secondary">14</span>
+                    <span class="badge badge-pill badge-secondary"></span>
                     <span class="date">Środa</span>
                 </li>
                 <li class="nav-item border-bottom" data-day="thursday">
-                    <span class="badge badge-pill badge-secondary">14</span>
+                    <span class="badge badge-pill badge-secondary"></span>
                     <span class="date">Czwartek</span>
                 </li>
                 <li class="nav-item border-bottom" data-day="friday">
-                    <span class="badge badge-pill badge-secondary">14</span>
+                    <span class="badge badge-pill badge-secondary"></span>
                     <span class="date">Piątek</span>
                 </li>
                 <li class="nav-item border-bottom" data-day="saturday">
-                    <span class="badge badge-pill badge-secondary">14</span>
+                    <span class="badge badge-pill badge-secondary"></span>
                     <span class="date">Sobota</span>
                 </li>
                 <li class="nav-item border-bottom" data-day="sunday">
-                    <span class="badge badge-pill badge-secondary">14</span>
+                    <span class="badge badge-pill badge-secondary"></span>
                     <span class="date">Niedziela</span>
                 </li>
 
@@ -109,7 +112,10 @@
             </div>
         </main>
     </div>
-    
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
@@ -120,7 +126,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
 
-    <script src="./dist/bundle.js"></script>    
+    <script src="./dist/bundle.js"></script>
+    <!-- <script src="js/modules/new-task.js"></script>
+    <script src="js/modules/tasks-list.js"></script>
+    <script src="js/modules/tasks.js"></script> -->
 </body>
 
 </html>
